Fixed issue with spacing between pads on each insturment track. This was happening because I had the margin on each pad set to 5rem when I needed to set it to 1rem 0.5rem which means it is 1 rem wide and 0.5 rem top

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ svg {
 .hithat-pad{
     width: 5rem;
     height: 5rem;
-    margin: 5rem;
+    margin: 1rem 0.5rem;
     cursor: pointer;
 
 }
@@ -39,6 +39,7 @@ svg {
     align-items: center;
     width: 70%;
     justify-content: space-between;
+    margin-top: 5rem;
 }
 .kick,
 .snare,
